# templ

./: .gitattributes  .pre-commit-config.yaml  .ruff.toml  DEVELOPMENT.md  LICENSE.md  README.md  all.sh  mypy.ini  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/: create_release_and_archive.sh  release.sh
.github/workflows/: ci.yml  cleanup.yml  compile-pypi.yml  create-releases.yml  cron.yml  release-notes.yml
